--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-www
-#    shm_size: 1g
-#    mem_limit: 1g
+    shm_size: 1g
+    mem_limit: 1g
     hostname: www.devbox
     volumes:
       - ./www:/var/www
