--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
     environment:
       - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
     ports:
       - "127.0.0.1:18080:8080"
       - "127.0.0.1:18443:8443"
